# arborito-games

./: .gitignore  CHANGELOG.md  NOTICE  README.md  game_builder.py  index.html  manifest.json  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
cartridges/: manifest.json
cartridges/alonso-duel/: card-modes.js  fx.js  game.js  index.html  meta.json
cartridges/classroom/: assets.js  engine.js  index.html  meta.json
cartridges/firstjob/: core.js  game.js  index.html  logic.js  meta.json  quiz-pool.js  ui.js  world.js
cartridges/hacky-terminal/: engine.js  index.html  meta.json
cartridges/memory/: fx.js  game.js  index.html  meta.json
cartridges/starship/: game.js  index.html  manifest.json  meta.json  platformer.js  space.js  story.js  utils.js
cartridges/wrong-fruit/: game.js  index.html  meta.json
docs/: dev-onboarding.md
public/: tailwind.css
sdk/: README.md  pyproject.toml
sdk/arborito_sdk/: __init__.py  archive.py  client.py  errors.py  quiz_v2.py
sdk/examples/: quiz_game.py
